# DlibDotNet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CreateSymlink.ps1  DebugTestSettings.testsettings  DlibDotNet.json  DlibDotNet.sln  ExecuteTest.bat  ExecuteTest.sh  Jenkinsfile  LICENSE.txt  README.md  ReleaseTestSettings.testsettings
examples/MultiThreadFaceDetectionCpp/: .gitattributes  .gitignore  Build.ps1  BuildBoost.ps1  CMakeLists.txt  README.md  Run.ps1  main.cpp
src/DlibDotNet.Native/: .gitignore  Build.ps1  BuildUnix.sh  BuildWindowsVS2015.bat  BuildWindowsVS2015WithCuda.bat  BuildWindowsVS2017.bat  BuildWindowsVS2017.ps1  CMakeLists.txt  CreateSymlink.bat  cmakelists.txt  version-cuda.rc.in  version.rc.in
src/DlibDotNet.Native.Dnn/: Build.ps1  BuildUnix.sh  BuildWindowsVS2017.bat  BuildWindowsVS2017.ps1  CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/DlibDotNet.Native.Dnn/dlib/: common.h  config.h  config.h.in
src/DlibDotNet.Native.Dnn/dlib/cuda/: cuda.h
src/DlibDotNet.Native.Dnn/dlib/dnn/: input.cpp  input.h  loss.cpp  loss.h  output.cpp  output.h  tensor.cpp  tensor.h  trainer.h  validation.cpp  validation.h
src/DlibDotNet.Native.Dnn/dlib/dnn/layers/: layers.cpp  layers.h
src/DlibDotNet.Native.Dnn/dlib/dnn/loss/: LossBase.cpp  LossBase.h  Registry.cpp  Registry.h  loss_metric.h  loss_metric_defines.h  loss_mmod.cpp  loss_mmod.h  loss_mmod_defines.h  loss_multiclass_log.h  template.cpp  (+5 more)
src/DlibDotNet.Native/dlib/: config.h  config.h.in  export.h  ostringstream.cpp  ostringstream.h  pair.cpp  pair.h  pixel.cpp  pixel.h  serialize.h  shared.h  stdlib.cpp  stdlib.h  stdstring.cpp  stdvector.cpp  stdvector.h  string.h  template.h  vector.cpp  vector.h  vector_streambuf.cpp  vector_streambuf.h
src/DlibDotNet.Native/dlib/array/: array.cpp  array.h
src/DlibDotNet.Native/dlib/array2d/: array2d.cpp  array2d.h
src/DlibDotNet.Native/dlib/clustering/: chinese_whispers.cpp  chinese_whispers.h  spectral_cluster.cpp  spectral_cluster.h
src/DlibDotNet.Native/dlib/cstd/: string.cpp  string.h
src/DlibDotNet.Native/dlib/cuda/: cuda.h
src/DlibDotNet.Native/dlib/data_io/: image_dataset_metadata.cpp  image_dataset_metadata.h  load_image_dataset.cpp  load_image_dataset.h  mnist.cpp  mnist.h
src/DlibDotNet.Native/dlib/dnn/: net.cpp  net.h
src/DlibDotNet.Native/dlib/extensions/: extensions.cpp  extensions.h
src/DlibDotNet.Native/dlib/geometry/: common.h  dpoint.cpp  dpoint.h  drectangle.cpp  drectangle.h  point.cpp  point.h  point_transforms.cpp  point_transforms.h  rectangle.cpp  rectangle.h  vector.h
src/DlibDotNet.Native/dlib/graph_utils/: sample_pair.cpp  sample_pair.h
src/DlibDotNet.Native/dlib/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_1.h
src/DlibDotNet.Native/dlib/gui_widgets/: action_mediator.cpp  action_mediator.h  base_widgets.cpp  base_widgets.h  canvas_drawing.cpp  canvas_drawing.h  custom_drawable_window.cpp  custom_drawable_window.h  drawable.cpp  drawable.h  widgets.h
src/DlibDotNet.Native/dlib/image_keypoint/: draw_surf_points.cpp  draw_surf_points.h  hessian_pyramid.cpp  hessian_pyramid.h  surf.cpp  surf.h
src/DlibDotNet.Native/dlib/image_loader/: load_bmp.cpp  load_bmp.h  load_dng.cpp  load_dng.h  load_image.cpp  load_image.h  load_jpeg.cpp  load_jpeg.h  load_png.cpp  load_png.h
src/DlibDotNet.Native/dlib/image_processing/: box_overlap_testing.cpp  box_overlap_testing.h  correlation_tracker.cpp  correlation_tracker.h  detection_template_tools.cpp  detection_template_tools.h  dnn_mmod_face_detector.cpp  dnn_mmod_face_detector.h  dnn_mmod_face_detector_fast.cpp  dnn_mmod_face_detector_fast.h  frontal_face_detector.cpp  frontal_face_detector.h  full_object_detection.cpp  full_object_detection.h  object_detector.cpp  object_detector.h  render_face_detections.cpp  render_face_detections.h  scan_fhog_pyramid.cpp  scan_fhog_pyramid.h  shape_predictor.cpp  shape_predictor.h  shape_predictor_trainer.cpp  shape_predictor_trainer.h
src/DlibDotNet.Native/dlib/image_saver/: save_bmp.cpp  save_bmp.h  save_dng.cpp  save_dng.h  save_jpeg.cpp  save_jpeg.h  save_png.cpp  save_png.h
src/DlibDotNet.Native/dlib/image_transforms/: assign_image.cpp  assign_image.h  colormaps.cpp  colormaps.h  draw.cpp  draw.h  edge_detector.cpp  edge_detector.h  equalize_histogram.cpp  equalize_histogram.h  fhog.cpp  fhog.h  hough_transform.cpp  hough_transform.h  image_gradients.cpp  image_gradients.h  image_pyramid.cpp  image_pyramid.h  interpolation.cpp  interpolation.h  random_color_transform.cpp  random_color_transform.h  random_cropper.cpp  random_cropper.h  segment_image.cpp  segment_image.h  spatial_filtering.cpp  spatial_filtering.h  template.h
src/DlibDotNet.Native/dlib/logger/: custom_logger.cpp  custom_logger.h  logger.cpp  logger.h
src/DlibDotNet.Native/dlib/matrix/: matrix.cpp  matrix.h  matrix_common.cpp  matrix_common.h  matrix_expressions.cpp  matrix_expressions.h  matrix_mat.cpp  matrix_mat.h  matrix_math_functions.cpp  matrix_math_functions.h  matrix_op.cpp  matrix_op.h  matrix_utilities.cpp  matrix_utilities.h
src/DlibDotNet.Native/dlib/misc_api/: misc_api_kernel_1.cpp  misc_api_kernel_1.h
src/DlibDotNet.Native/dlib/mlp/: mlp.cpp  mlp.h
src/DlibDotNet.Native/dlib/optimization/: max_cost_assignment.cpp  max_cost_assignment.h  optimization_solve_qp2_using_smo.cpp  optimization_solve_qp2_using_smo.h
src/DlibDotNet.Native/dlib/pipe/: pipe.cpp  pipe.h  template.h
src/DlibDotNet.Native/dlib/queue/: queue.cpp  queue.h  template.h
src/DlibDotNet.Native/dlib/rand/: rand_kernel_1.cpp  rand_kernel_1.h
src/DlibDotNet.Native/dlib/statistics/: statistics.cpp  statistics.h
src/DlibDotNet.Native/dlib/string/: string.h
src/DlibDotNet.Native/dlib/svm/: feature_ranking.cpp  feature_ranking.h  function.cpp  function.h  kcentroid.cpp  kcentroid.h  kernel.cpp  kernel.h  kkmeans.cpp  kkmeans.h  krls.cpp  krls.h  svm.cpp  svm.h  template.h
src/DlibDotNet.Native/dlib/threads/: custom_multithreaded_object.cpp  custom_multithreaded_object.h  multithreaded_object.cpp  multithreaded_object.h  threads_kernel_shared.cpp  threads_kernel_shared.h
(+1146 files in other folders)
